--- a/influcid-BY/index.html
+++ b/influcid-BY/index.html
@@ -57,7 +57,7 @@
         <div class="main-img-container main-img-container-ru"></div>
         <a name="block-1"></a>
         <p>
-          <b>Простуда?</b> Выбор за тобой. <b>Инфлюцид</b>
+          ОРЗ? Простуда? Грипп? Помогает <b>Инфлюцид!!!</b>
         </p>
 
         <div class="header-block-2">
@@ -79,16 +79,16 @@
         <h2>ПРЕИМУЩЕСТВА</h2>
         <div class="block-1__text">
           <p>
-            Устраняет типичные симптомы простуды.¹
+            Эффективен в лечении  острых лихорадочных простудных заболеваний
           </p>
           <p>
-            Уменьшает потребность в  симптоматических средствах (жаропонижающих, каплях в нос, препаратах от кашля).²
+            Эффективен при насморке (остром рините)
           </p>
           <p>
-            Способствует быстрому выздоровлению.¹
+            Устраняет типичные симптомы простуды
           </p>
           <p>
-            Предотвращает заболевание после контакта с людьми, которые болеют.
+            Уменьшает потребность в симптоматических средствах (жаропонижающих, каплях в нос)
           </p>
           <p>Восстанавливает силы после перенесенного заболевания.¹</p>
         </div>
@@ -99,16 +99,14 @@
         <div class="block-2__container"> 
           <div class="block-2__image">
             <b>
-              Усиливает природную<br>защиту организма и способствует<br>быстрому выздоровлению¹
+              КОМПЛЕКСНОЕ ЛЕЧЕНИЕ ГРИППА И ОРЗ
             </b>
           </div>
           <div class="block-2__text">
-            <p>СНИЖАЕТ ТЕМПЕРАТУРУ</p>
-            <p>УСТРАНЯЕТ ОЩУЩЕНИЕ ЛОМОТЫ В ТЕЛЕ</p>
-            <p>СНИМАЕТ ГОЛОВНУЮ БОЛЬ</p>
-            <p>УМЕНЬШАЕТ ЗАЛОЖЕННОСТЬ НОСА</p>
-            <p>УСТРАНЯЕТ БОЛЬ И ПЕРШЕНИЕ В ГОРЛЕ</p>
-            <p>СПОСОБСТВУЕТ ПРЕДОТВРАЩЕНИЮ РАЗВИТИЯ ЗАБОЛЕВАНИЯ</p>
+            <p>снижению температуры</p>
+            <p>устранению общей слабости, невралгии, головной боли</p>
+            <p>устранению симптомов острого ринита</p>
+            <p>устранению боли и першения в горле</p>
           </div>
         </div>
       </div>
@@ -162,7 +160,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 1 года до 6 лет:</b> рассасывать до полного растворения по 1 таблетке каждые 2 часа (не больше 8 таблеток в сутки) до наступления улучшения
+              <b>Детям с 1 года до 6 лет:</b> получают в острый период по 1 таблетке 3 раза в сутки
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -172,14 +170,14 @@
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
-                <div class="pill-container pill8"></div>
+                <div class="pill-container pill3"></div>
               </div>
               <div class="subcontainer-particle-1">
                 <b>
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
                 <b class="subtext">До выздоровления</b>
-                <p>1 таблетку 3 раза в сутки</p>
+                <p>по 1 таблетке 3 раза в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -192,7 +190,7 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 6 до 12 лет:</b> по 1 таблетке 4 раза в сутки.
+              <b>Детям с 6 лет до 12 лет:</b> по 1 таблетке 4 раза в сутки
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -202,7 +200,7 @@
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
-                <div class="pill-container pill8"></div>
+                <div class="pill-container pill4"></div>
               </div>
               <div class="subcontainer-particle-1">
                 <b>
@@ -223,17 +221,17 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 12 лет и  взрослым:</b> по 1 таблетке 6 раз в сутки.
+              <b>Взрослые и подростки с 12 лет:</b> по 1 таблетке каждые полчаса –час до 6 таблеток в сутки
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
                 <b>В ПЕРВЫЕ СУТКИ</b>
                 <b class="subtext">Каждый час</b>
-                <p>по 1 таблетке 6 раз в сутки</p>
+                <p>по 1 таблетке 3 раза в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
-                <div class="pill-container pill12"></div>
+                <div class="pill-container pill6"></div>
               </div>
               <div class="subcontainer-particle-1">
                 <b>
@@ -253,21 +251,29 @@
 
         <div class="bottom-text">
           <p>
-            Применение препарата при первых проявлениях симптомов ОРВИ и гриппа или сразу после контакта с людьми, которые заболели, способствует предотвращению развития заболевания;
+            Таблетки Инфлюцид  следует принимать за полчаса до или через полчаса после еды, давая медленно раствориться во рту;
 
           </p>
           <p>
-            Длительность приёма препарата Инфлюцид после контакта с больными гриппом или ОРВИ - 1 неделя;
+            При лечении детей до 6 лет таблетки рекомендуется  растворять в небольшом количестве  воды;
+
+          </p>
+          <p>
+            Длительность приема препарата Инфлюцид для лечения ОРВИ и гриппа – 1 неделя;
+
+          </p>
+          <p>
+            Применение препарата Инфлюцид во время беременности и лактации возможно после консультации с врачом.
 
           </p>
         </div>
-        <div class="bottom-text__b">
+        <!-- <div class="bottom-text__b">
           <b>
             Таблетки медленно рассасывать во рту до полного растворения.  
 Детям до 3 лет рекомендуется растворять таблетку в небольшом количестве жидкости или давать в измельченном виде, под язык. 
 Препарат принимать за полчаса до или через полчаса после еды
           </b>
-        </div>
+        </div> -->
         <a class="buy-btn pill-btn"><p>Где купить</p></a>
       </div>
 
@@ -372,7 +378,7 @@
                 </div>
                 <p>Как осложнение болезни - пневмония, которая иногда может за 4-5 дней привести к смерти больного. Также нередко развивается сердечная недостаточность.</p>
                 <p>Если Вы уже заболели, обязательно обратитесь к своему семейному врачу или терапевту.</p>
-                <p class="panel__accent-text">Инфлюцид - ваш правильный выбор при простуде и гриппе</p>
+                <p class="panel__accent-text">ОРЗ? Простуда? Грипп? Помогает Инфлюцид!!!</p>
                 <div class="panel__checklist">
                   <p>Доказанная противовирусная активность препарата Инфлюцид при сезонном H1N1, H5N2, H3N2 гриппе *</p>
                   <p>Активно борется с вирусами гриппа и ОРВИ *</p>
@@ -383,6 +389,7 @@
                 <div class="panel__sub">
                   <p>* М.Ю. Еропкин, Т.М. Гкудкова, Д.М. Даниленко и соавт: «Пандемический грипп 2009 г в России», РМЖ Том 18, 2010</p>
                   <p>** М. Тинессе-Маллвиц, В. Майданник, Т. Келлер, П. Клемент. Комбинированное гомеопатическое средство для лечения лихорадочных ОРВИ:  Международное, рандомизированное, контролируемое исследование. Журнал «Forsch Komplementmed», Том 22, Издание 3, июнь 2015 г.</p>
+                  <p>Еропкин М.Ю., Брязжикова Т.С., Еропкина Е.М.  «Возможности повышения эффективности противовирусной терапии и профилактики ОРВИ. Новые экспериментальные данные на клеточных культурах.» Регулярные выпуски «РМЖ» №18 от 30.08.11 стр. 1151.</p>
                   <p>¹www.phc.org.ua.</p>
                 </div>
               </div>
@@ -409,8 +416,8 @@
                   <p>Ринит - в начале водянистые выделения, которые стекают также по задней стенке глотки, в дальнейшем - ощущение заложенности носа и нарушение носового дыхания, нарушение обоняния, чихание;¹</p>
                 </div>
                 <p>В сезон простуд так хочется поддержать иммунитет ребенка, чтобы он не болел или выздоравливал быстрее, как сделать это безопасно? Ведь для детей хочется применять только натуральные и проверенные средства.</p>
-                <p class="panel__accent-text">Инфлюцид - ваш правильный выбор при простуде и гриппе</p>
-                <p>Немецкий препарат Инфлюцид укрепляет иммунитет и способствует выздоровлению.
+                <p class="panel__accent-text">ОРЗ? Простуда? Грипп? Помогает Инфлюцид!!!</p>
+                <p>
                   Эффективность и безопасность препарата Инфлюцид изучены в ходе многих клинических исследований, в том числе с участием детей *.
                 </p>
                 <p>Желаем Вам и Вашим деткам крепкого здоровья.
@@ -437,6 +444,8 @@
                 <ol>
                   <li>Инструкция для медицинского использования к препарату Инфлюцид</li>
                   <li>Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial</li>
+                  <li>Еропкин М.Ю., Брязжикова Т.С., Еропкина Е.М. «Возможности повышения эффективности противовирусной терапии и профилактики ОРВИ. Новые экспериментальные данные на клеточных культурах.» Регулярные выпуски «РМЖ» № 18 от 30.08.2011 стр. 1151.</li>
+                  <li>Сукало А.В., Бовбель И.Э. Национальная академия наук Беларуси. «Справочник по поликлинической педиатрии» 3-е издание, 2020, раздел «Лечение и профилактика острых респираторных инфекций» стр. 146.</li>
                 </ol>
               </div>
             </div>
