--- a/AlphaPharmaceutical/index-en.html
+++ b/AlphaPharmaceutical/index-en.html
@@ -227,16 +227,16 @@
         <h2>Contact form</h2>
 
     </div>
-    <form>
+    <form action="/send.php" method="POST">
         <div class="form-top">
-            <input class="inp-name" type="text" placeholder="Name" required>
-            <input class="inp-email" type="email" id="email" placeholder="E-mail"
+            <input class="inp-name" id="name" type="text" placeholder="Name" required>
+            <input class="inp-email" id="messanger-contact" type="email" placeholder="E-mail"
                    required>
         </div>
         <div class="inp-text">
-            <input class="form-text" type="text" placeholder="Message" required>
+            <input class="form-text" id="message" name="main-text" type="text" placeholder="Message" required>
         </div>
-        <button>Send</button>
+        <button>Wyślij</button>
     </form>
 </div>
 
