--- a/influcid-Moldova/index-mol.html
+++ b/influcid-Moldova/index-mol.html
@@ -34,25 +34,25 @@
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
               <ul id="menu">
-                <li><a class="navmenu" href="#block-1" >No text in translation</a></li>
-                <li><a class="navmenu" href="#block-2" >No text in translation</a></li>
-                <li><a class="navmenu" href="#block-3" >No text in translation</a></li>
-                <li><a class="navmenu" href="#block-4" >No text in translation</a></li>
-<!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
+                <li><a class="navmenu" href="#block-1" >Priorități</a></li>
+                <li><a class="navmenu" href="#block-2" >Acțiune</a></li>
+                <li><a class="navmenu" href="#block-3" >Componență</a></li>
+                <li><a class="navmenu" href="#block-4" >Cum se administrează</a></li>
+                <li><a class="where-to-buy" href="#block-5" >Unde îl poți procura</a></li>
                  <li><a href="index.html" >ru</a></li>
               </ul>
             </div>
           </div>
           <div class="desctop-navigation">
-            <a class="navmenu" href="#block-1" >No text in translation</a>
-              <a class="navmenu" href="#block-2" >No text in translation</a>
-              <a class="navmenu" href="#block-3" >No text in translation</a>
-              <a class="navmenu" href="#block-4" >No text in translation</a>
-              <a class="where-to-buy" href="#block-5" >No text in translation</a>
+            <a class="navmenu" href="#block-1" >Priorități</a>
+              <a class="navmenu" href="#block-2" >Acțiune</a>
+              <a class="navmenu" href="#block-3" >Componență</a>
+              <a class="navmenu" href="#block-4" >Cum se administrează</a>
+              <a class="where-to-buy" href="#block-5" >Unde îl poți procura</a>
                <a href="index.html" >ru</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
-          ><p class="translated-text" key="instruction">No text in translation</p></a
+          ><p class="translated-text" key="instruction">Instrucțiune</p></a
           >
         </div>
 
@@ -424,8 +424,18 @@
             </div>
 
             <div class="block-7">
-              <h2>UNDE POȚI  PROCURA</h2>
-              <div class="block-7__img"></div>
+              <h2>Rezervează Influcid la cea mai aproape farmacie</h2>
+              <!-- <div class="block-7__img"></div> -->
+              <div class="apt-container">
+                <a href="https://farmaciafamiliei.md/"></a>
+                <a href="http://medicamente.md/"></a>
+                <a href="https://felicia.md/ro/"></a>
+              
+                <a href="https://www.apteka.md/"></a>
+                <a href="https://farmacie.md/"></a>
+                <a href="https://www.farmacieonline.md/"></a>
+                <a href="https://farmacie-online.md/ru/"></a>
+              </div>
               <div class="block-7__text">
                 <h3>Baza de dovezi</h3>
                 <ol>
@@ -454,13 +464,14 @@
 <!--              <br>-->
 <!--              :Email__-->
 <!--            </p>-->
+            <p>DEŢINĂTORUL CERTIFICATULUI DE ÎNREGISTRARE Deutsche Homöopathie-Union DHU-Arzneimittel GmbH & Co KG, Ottostrasse 24, 76227 Karlsruhe Germania Tel.: + 49 (721) 40 93 236</p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>Producător:</b><br>DHU (Germania)<br>https://www.dhu.de/</p></a>
               <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Importator:</b><br> Alpen Pharma<br>(Elveţia)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>No text in translation</p>
+            <p>Acesta este un medicament. Cititi cu atentie prospectul. Daca apar menifestari neplacute, adresati-va medicului sau farmacistului</p>
           </div>
 
 
