--- a/influcid-Moldova/index.html
+++ b/influcid-Moldova/index.html
@@ -357,65 +357,6 @@
         <div class="block-6">
             <h2>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</h2>
             <!-- //////new -->
-<div class="block-6__container">
-              <div class="block-6__container-img"><p>Время выбирать здоровье</p></div>
-              <div class="block-6__container-text"><p>Генеральный директор Всемирной организации здравоохранения на брифинге для СМИ по поводу коронавируса COVID-19 от 11 марта 2020, заявил, что COVID-19 можно характеризовать как пандемию.<br>Это не повод паниковать и бояться. В этот период следует придерживаться рекомендаций ВООЗ, МОЗ Украины и врачей. А также трезвая мыслить и оценивать ситуацию.
-Сейчас есть очень много информации о коронавирусе, пути его передачи, что нужно делать, чтобы не заразиться и как себя вести в условиях карантина. Ориентируйтесь на официальные рекомендации.</p>
-              </div>
-              <button class="accordion">Подробнее</button>
-              <div class="panel">
-
-
-
-              <h1>Как защитить себя от вирусных инфекций?<sup>2</sup></h1>
-
-                <div class='panel-inner'>
-                  <div>
-                    <h3>Укрепляйте иммунитет и следите за самочувствием</h3>
-            <p>Полноценное питание, здоровый сон, физические упражнения и водный баланс организма</p>
-          </div>
-
-          <div>
-            <h3>Избегайте контакта с людьми с симптомами ОРВИ</h3>
-            <p>С теми, кто имеет симптомы простуды. Минимальная дистанция- 1,5 м</p>
-          </div>
-
-          <div>
-            <h3>Вовремя обращайтесь к врачу</h3>
-            <p>Не употребляйте сырое мясо, мясные субпродукты и яйца</p>
-          </div>
-
-          <div>
-            <h3>Термически обрабатывайте продукты</h3>
-            <p>Не употребляйте сырое мясо, мясные субпродукты и яйца</p>
-          </div>
-
-          <div>
-            <h3>Мойте часто руки с мылом в течение 20-ти секунд</h3>
-            <p>Или пользуйтесь антисептиком, содержание спирта в котором должен быть не менее 60 - 80%</p>
-          </div>
-
-          <div>
-            <h3>Избегайте прикосновений к своему лицу</h3>
-            <p>Не прикасайтесь грязными руками глаз, носа и рта</p>
-          </div>
-                </div>
-
-
-                <p>Осложненное течение болезни от коронавирусной инфекции на сегодня имеют люди старшего поколения, тяжелобольные, люди с сопутствующими заболеваниями (сердечно - сосудистые заболевания, онкология, диабет) и те, у кого снижен иммунитет.</p>
-                <p>Сейчас внимание населения отдано и сконцентрировано вокруг распространения коронавируса COVID-19, но не следует забыть, что повысилась заболеваемость гриппом и ОРВИ.</p>
-                <p>На 10-й неделе ОРВИ заболели 220 932 человека, из них 66,4% - дети в возрасте до 17 лет. Интенсивный показатель заболеваемости составляет 577,8 на 100 000 населения, что на 21,2% больше эпидемического порога по Украине <sup>3</sup>.  </p>
-                <div class='inner-img'></div>
-                <p>Препарат ИНФЛЮЦИД содержит шесть активных компонентов, наиболее приемлемых для лечения острой респираторной вирусной инфекции. ИНФЛЮЦИД останавливает типичные признаки острой инфекции дыхательных путей, такие как лихорадка, головная боль, болезненность мышц, а также ринит и фарингит. <sup>1</sup>. </p>
-                <p>ИНФЛЮЦИД усиливает естественную защиту организма и способствует быстрому выздоровлению и восстановлению сил после перенесенного заболевания, таким образом уменьшает признаки истощения (астенический синдром) или предотвращает их. Применение препарата при первых проявлениях заболевания или сразу после контакта с людьми, которые заболели, способствует предотвращению развития заболевания<sup>1</sup>.</p>
-                <p>Берегите себя и своих близких. Желаем крепкого здоровья и крепкого иммунитета.</p>
-                  <p><sup>1</sup><a href='./instruction.pdf' >Инструкция для медицинского использования к препарату Инфлюцид</a></p>
-                  <p><sup>2</sup><a href='http://covid19.com.ua/#rec166168889' >http://covid19.com.ua/#rec166168889</a></p>
-                  <p><sup>3</sup><a href='https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini' >https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini</a></p>
-                  
-              </div>
-            </div>
-<!-- /////////////new -->
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Грипп сезона 2020</p></div>
               <div class="block-6__container-text"><p>Эпидемиологический сезон начался и уже пора к нему готовиться. Обратите внимание, что разница между гриппом и ОРВИ (острая респираторная вирусная инфекция) заключается в том, что возбудителями гриппа являются различные штаммы вируса гриппа (варианты одного вида вируса, что отличаются по ряду свойств), а возбудителями ОРВИ является более 200 разнообразных вирусов, которые часто не связаны генетически и принадлежат к разным группам заболеваний.</p>
@@ -501,7 +442,16 @@
 
             <div class="block-7">
               <h2>Где купить</h2>
-               <div class="block-7__img"></div>
+               <div class="apt-container">
+                <a href="https://farmaciafamiliei.md/"></a>
+                <a href="http://medicamente.md/"></a>
+                <a href="https://felicia.md/ro/"></a>
+              
+                <a href="https://www.apteka.md/"></a>
+                <a href="https://farmacie.md/"></a>
+                <a href="https://www.farmacieonline.md/"></a>
+                <a href="https://farmacie-online.md/ru/"></a>
+              </div>
               <div class="block-7__text">
                 <h3>Доказательная база</h3>
                 <ol>
@@ -523,13 +473,14 @@
             <!--              <br>-->
             <!--              :Email__-->
             <!--            </p>-->
+            <p>DEŢINĂTORUL CERTIFICATULUI DE ÎNREGISTRARE Deutsche Homöopathie-Union DHU-Arzneimittel GmbH & Co KG, Ottostrasse 24, 76227 Karlsruhe Germania Tel.: + 49 (721) 40 93 236</p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>Producător:</b><br>DHU (Germania)<br>https://www.dhu.de/</p></a>
               <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Importator:</b><br> Alpen Pharma<br>(Elveţia)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>No text in translation</p>
+            <p>Acesta este un medicament. Cititi cu atentie prospectul. Daca apar menifestari neplacute, adresati-va medicului sau farmacistului</p>
           </div>
 
 
