--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
 	a:nth-child(27)::before {
 		background: url("./influcid-Moldova/bg.png")no-repeat center / cover;
 	}
+	a:nth-child(28)::before {
+		background: url("./Tansilotren/bg.png")no-repeat center / cover;
+	}
 </style>
 
 </body>
