--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -53,7 +53,7 @@
 
 <!--    end navigation-->
 
-    <div class="header">
+    <div class="header-custom">
         <div class="header-container">
             <div class="header-title">
                 <b>Ангина?</b><br>
