--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -20,7 +20,7 @@
                 <a class="navmenu" href="#block-1" >Состав и действие</a>
                 <a class="navmenu" href="#block-2">Способ приемА</a>
                 <a class="navmenu" href="#block-3">Полезная информация</a>
-                <a class="navmenu where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
+                <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
             </div>
 
             <!--        mobile menu-->
@@ -39,7 +39,7 @@
                             <a class="navmenu" href="#block-3">Полезная информация</a>
                         </li>
                         <li>
-                            <a class="navmenu where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
+                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
                         </li>
                     </ul>
                 </div>
@@ -108,6 +108,11 @@
             <div class="block-4__container-content">
                 <p><b>Atropinum sulfuricum</b> –  оказывает противовоспалительное действие при остром течении, снимает боль в горле при глотании, устраняет гиперемию и отек миндалин, уменьшает лихорадку³</p>
             </div>
+        </div>
+        <div class="counter">
+            <div class="left-arrow"></div>
+            <div class="counter-num"><p>1 / 5</p></div>
+            <div class="right-arrow"></div>
         </div>
     </div>
 
@@ -232,7 +237,7 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 2 до 6 лет</h3>
-            <p><b>При острых состояниях или для поддерживающей терапии: </b>  по 1 табл. 3 раза в день.</p>
+            <p><b>При острых состояниях или для поддерживающей терапии:</b> <br>по 1 табл. 3 раза в день.</p>
             <!--            <div class="popup popup1">Детальнее</div>-->
             <button class="popup-btn popup1" data-action="open1">Детальнее</button>
         </div>
@@ -248,13 +253,13 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 6 до 12 лет</h3>
-            <p><b>Острый период: </b>  по 1 табл.  каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
+            <p><b>Острый период:</b><br>по 1 табл.  каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
             <button class="popup-btn popup2" data-action="open2">Детальнее</button>
         </div>
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети старше 12 лет и взрослые</h3>
-            <p><b>Острый период: </b>  по 1 табл. каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
+            <p><b>Острый период:</b> <br>по 1 табл. каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
             <button class="popup-btn popup3" data-action="open3">Детальнее</button>
         </div>
     </div>
@@ -334,7 +339,7 @@
 
 
 
-        <div class="block-5__plate">
+        <div class="block-5__plate block-5__un_plate">
             <div class="block-5__img"></div>
             <div class="block-5__text block-5__text-top">
                 <h4>Факты про <br><b>Тонзилотрен</b></h4>
