--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -109,9 +109,29 @@
                 <p><b>Atropinum sulfuricum</b> –  оказывает противовоспалительное действие при остром течении, снимает боль в горле при глотании, устраняет гиперемию и отек миндалин, уменьшает лихорадку³</p>
             </div>
         </div>
-        <div class="counter">
+        <div class="counter counter1 ">
             <div class="left-arrow"></div>
             <div class="counter-num"><p>1 / 5</p></div>
+            <div class="right-arrow right-arrow1"></div>
+        </div>
+        <div class="counter counter2 hidden">
+            <div class="left-arrow left-arrow2"></div>
+            <div class="counter-num"><p>2 / 5</p></div>
+            <div class="right-arrow right-arrow2"></div>
+        </div>
+        <div class="counter counter3 hidden">
+            <div class="left-arrow left-arrow3"></div>
+            <div class="counter-num"><p>3 / 5</p></div>
+            <div class="right-arrow right-arrow3"></div>
+        </div>
+        <div class="counter counter4 hidden">
+            <div class="left-arrow left-arrow4"></div>
+            <div class="counter-num"><p>4 / 5</p></div>
+            <div class="right-arrow right-arrow4"></div>
+        </div>
+        <div class="counter counter5 hidden">
+            <div class="left-arrow left-arrow5"></div>
+            <div class="counter-num"><p>5 / 5</p></div>
             <div class="right-arrow"></div>
         </div>
     </div>
