--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -65,9 +65,9 @@
                 <div class="header-main-product-img-mobile"></div>
                 <div class="header-main-center">
                     <p>Снимает воспаление и боль в горле¹</p>
-                    <p>Восстанавливает защитную <br>функцию миндалин² ³</p>
-                    <p>Уменьшает риск повторных ангин <br>и потребность в применении<br> антибиотиков²</p>
-                    <p>Базисная терапия<br>  при хроническом тонзиллите⁴</p>
+                    <p>Восстанавливает защитную<br>функцию миндалин² ³</p>
+                    <p>Уменьшает риск повторных ангин<br>и потребность в применении<br> антибиотиков²</p>
+                    <p>Базисная терапия<br> при хроническом тонзиллите⁴</p>
                 </div>
                 <div class="header-main-img"></div>
             </div>
@@ -92,7 +92,7 @@
     </a>
     <a name="block-1"></a>
 </div>
-<h2> 5 натуральных компонентов <br><b>для профилактики и лечения ангины</b></h2>
+<h2> 5 натуральных компонентов<br><b>для профилактики и лечения ангины</b></h2>
 <div class="block-4__container">
     <div class="block-interactive-inner">
         <div class="block-interactive-inner__img"></div>
@@ -257,7 +257,7 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 2 до 6 лет</h3>
-            <p><b>При острых состояниях или для поддерживающей терапии:</b> <br>по 1 табл. 3 раза в день.</p>
+            <p><b>При острых состояниях или для поддерживающей терапии:</b><br>по 1 табл. 3 раза в день.</p>
             <!--            <div class="popup popup1">Детальнее</div>-->
             <button class="popup-btn popup1" data-action="open1">Детальнее</button>
         </div>
@@ -273,13 +273,13 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 6 до 12 лет</h3>
-            <p><b>Острый период:</b><br>по 1 табл.  каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
+            <p><b>Острый период:</b><br>по 1 табл. каждые 2 часа (до 6 раз в день)первые 1-2 дня до улучшения.</p>
             <button class="popup-btn popup2" data-action="open2">Детальнее</button>
         </div>
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети старше 12 лет и взрослые</h3>
-            <p><b>Острый период:</b> <br>по 1 табл. каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
+            <p><b>Острый период:</b><br>по 1 табл.каждый час (до 12 раз в день)первые 1-2 дня до улучшения.</p>
             <button class="popup-btn popup3" data-action="open3">Детальнее</button>
         </div>
     </div>
@@ -329,7 +329,7 @@
 
                 <p>Более 80 лет для успешного лечения ангины и рекуррентного тонзиллита применяется немецкий натуральный комплексный препарат Тонзилотрен (DHU, Германия).ТОНЗИЛОТРЕН – комбинация из пяти активных натуральных компонентов, которые снимают воспаление и стимулируют собственные защитные механизмы организма при вирусных и бактериальных инфекциях глотки на разных стадиях воспаления, способствуют уменьшению увеличенных миндалин.</p>
 
-                <p>Важно, что Тонзилотрен, действуя на миндалины, снимает воспаление и восстанавливает их защитную функцию, что способствует уменьшению количества и риска возникновения повторных ангин и потребности в применении антибиотиков2.</p>
+                <p>Важно, что Тонзилотрен, действуя на миндалины, снимает воспаление и восстанавливает их защитную функцию, что способствует уменьшению количества и риска возникновения повторных ангин и потребности в применении антибиотиков<sup>2</sup>.</p>
 
                 <p>Препарат можно применять как для лечения, так и для профилактики ангин. Применяется у детей старше 2 лет и взрослых. При склонности к частым ангинам несколько курсов в год с применением препарата Тонзилотрен могут позволить сохранить миндалины — важный иммунный орган человека. Курс: по 1 табл. 3 раза в день в течение 6-8 недель.</p>
 
@@ -521,7 +521,7 @@
             <div class="mobile mob5">
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text">
-                    <h4>Рекомендации <br>при
+                    <h4>Рекомендации<br>при
                         <br><b>ангине</b></h4>
                     <p>Когда воспалено горло, <b>возникают проблемы с голосом</b>. Помогите себе, чтобы снять воспаление и ощущение першения, когда возникает чувство, что «дерёт» в горле.
 
@@ -584,7 +584,7 @@
     </div>
 
     <div class="disclamer-warning">
-        <p>САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p>
+        <p>САМОЛІКУВАННЯ МОЖЕ БУТИ<br>ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p>
     </div>
 </div>
 
