--- a/influcid-BY/index.html
+++ b/influcid-BY/index.html
@@ -90,7 +90,6 @@
           <p>
             Уменьшает потребность в симптоматических средствах (жаропонижающих, каплях в нос)
           </p>
-          <p>Восстанавливает силы после перенесенного заболевания.¹</p>
         </div>
       </div>
       <a name="block-2"></a>
@@ -103,7 +102,7 @@
             </b>
           </div>
           <div class="block-2__text">
-            <p>снижению температуры</p>
+            <p>способствует снижению температуры</p>
             <p>устранению общей слабости, невралгии, головной боли</p>
             <p>устранению симптомов острого ринита</p>
             <p>устранению боли и першения в горле</p>
@@ -160,13 +159,13 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Детям с 1 года до 6 лет:</b> получают в острый период по 1 таблетке 3 раза в сутки
+              <b>Детям с 1 года до 6 лет:</b>
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
-                <b>В ПЕРВЫЕ СУТКИ</b>
+                <b>В 1-2 сутки</b>
                 <b class="subtext">Каждые 2 часа</b>
-                <p>по 1 таблетке</p>
+                <p>по 1 таблетке 3 раза в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -190,7 +189,7 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Детям с 6 лет до 12 лет:</b> по 1 таблетке 4 раза в сутки
+              <b>Детям с 6 лет до 12 лет:</b> 
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -221,13 +220,13 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Взрослые и подростки с 12 лет:</b> по 1 таблетке каждые полчаса –час до 6 таблеток в сутки
+              <b>Взрослые и подростки с 12 лет:</b> 
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
-                <b>В ПЕРВЫЕ СУТКИ</b>
-                <b class="subtext">Каждый час</b>
-                <p>по 1 таблетке 3 раза в сутки</p>
+                <b>В 1-2  СУТКИ</b>
+                <b class="subtext">Каждые час</b>
+                <p>по 1 таблетке до 6 таблеток в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
