--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -341,7 +341,7 @@
         <div class="mobile mob2">
         <div class="test-img-mobile"></div>
 
-            <div class="block-5__text block-5__text-top">
+            <div class="block-5__text block-5__text-top non-usual">
                 <h4>Факты про <br><b>Тонзилотрен</b></h4>
                 <p><b>Выпускается в Германии с 1935 года.</b>
 
