--- a/influcid-Moldova/index-mol.html
+++ b/influcid-Moldova/index-mol.html
@@ -375,7 +375,7 @@
                 <p>Dacă sunteți deja bolnav, adresați-vă la medicul de familie sau terapeut.</p>
                 <p class="panel__accent-text">Influcid este alegerea  potrivită în răceală și gripă.</p>
                 <div class="panel__checklist">
-                  <p>Activitate antivirală dovedita a Influcid în gripa sezoniera H1N1, H5N2, H3N2 *.</p>
+                  <p>Activitate antivirală dovedită în gripa sezonieră H1N1, H5N2, H3N2 *.</p>
                   <p>Combate activ virușii gripali și IRVA *.</p>
                   <p>Ameliorează rapid simptomele tipice ale gripei și IRVA.</p>
                   <p>Reduce necesitatea de a lua alte medicamente simptomatice **.</p>
@@ -471,7 +471,7 @@
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>Acesta este un medicament. Cititi cu atentie prospectul. Daca apar menifestari neplacute, adresati-va medicului sau farmacistului</p>
+            <p>Acesta este un medicament. Citiți cu atenție prospectul. Dacă apar manifestări neplăcute, adresați-vă medicului sau farmacistului</p>
           </div>
 
 
