--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -16,11 +16,13 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="#top"></a>
+            <a class="where-to-buy-mob" href="">ГДЕ КУПИТЬ</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Состав и действие</a>
                 <a class="navmenu" href="#block-2">Способ приемА</a>
                 <a class="navmenu" href="#block-3">Полезная информация</a>
                 <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
+                <a class="lang" href="">en</a>
             </div>
 
             <!--        mobile menu-->
@@ -38,8 +40,11 @@
                         <li>
                             <a class="navmenu" href="#block-3">Полезная информация</a>
                         </li>
+<!--                        <li>-->
+<!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
+<!--                        </li>-->
                         <li>
-                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
+                            <a class="lang" href="">en</a>
                         </li>
                     </ul>
                 </div>
@@ -75,21 +80,21 @@
     </div>
 
 <div class="header-block-2">
-    <a class="block-2__plate">
+    <div class="block-2__plate">
         <p>Сделано в Германии</p>
-    </a>
-    <a class="block-2__plate">
+    </div>
+    <div class="block-2__plate">
         <p>№1 при хроническом
-            <br>тонзиллите 4</p>
-    </a>
-    <a class="block-2__plate">
+            <br>тонзиллите <sup>4</sup></p>
+    </div>
+    <div class="block-2__plate">
         <p>Натуральный
             <br>состав</p>
-    </a>
-    <a href="" class="block-2__plate">
+    </div>
+    <div href="" class="block-2__plate">
         <p>ДоказанНАЯ<br>
-            эффективность</p>
-    </a>
+            эффективность<sup>5</sup></p>
+    </div>
     <a name="block-1"></a>
 </div>
 <h2> 5 натуральных компонентов<br><b>для профилактики и лечения ангины</b></h2>
@@ -450,7 +455,7 @@
         <div class="block-5__plate">
             <div class="block-5__img"></div>
             <div class="block-5__text block-5__text-top">
-                <h4>Тонзилотрен и тонзиллит – <br><b>в цифрах</b></h4>
+                <h4>Тонзилотрен и тонзиллит<br><b>в цифрах</b></h4>
                 <p>Тонзиллит – воспаление миндалин, он может быть острым или хроническим. Тонзиллит называется хроническим, когда повторяется два или более раз в год.
 
                     <b>Может привести к снижению иммунитета</b>, склонности к частым простудам, возможности развития опасных для жизни осложнений.
@@ -464,7 +469,7 @@
             <div class="mobile mob4">
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text block-5__text-top">
-                    <h4>Тонзилотрен и тонзиллит – <br><b>в цифрах</b></h4>
+                    <h4>Тонзилотрен и тонзиллит<br><b>в цифрах</b></h4>
                     <p>Тонзиллит – воспаление миндалин, он может быть острым или хроническим. Тонзиллит называется хроническим, когда повторяется два или более раз в год.
 
                         <b>Может привести к снижению иммунитета</b>, склонности к частым простудам, возможности развития опасных для жизни осложнений.
@@ -564,6 +569,7 @@
                 <li>Jürgen Palma et all. «Effectiveness of an add-on treatment with the homeopathic medication SilAtro-5-90 in recurrent tonsillitis: An international, pragmatic, randomized, controlled clinical trial» // Complementary Therapies in Clinical Practice Volume 28, August 2017, Pages 181-191.</li>
                 <li>Т.А. Крючко и соавт. «Результаты клинических исследований по применению Тонзилотрена у детей с хроническим тонзиллитом» // Дитячий лікар 5 (7) 2010, с. 54-58</li>
                 <li>По данным проекта «Rx test — Мониторинг назначений лекарственных средств» компании «Proxima Research» при основном диагнозе хронический тонзиллитв в 2017 г.</li>
+                <li><a>https://www.clinicaltrialsregister.eu/ctr-search/search?query=tonsilotren</a></li>
             </ol>
         </div>
 
