--- a/AlphaPharmaceutical/index-en.html
+++ b/AlphaPharmaceutical/index-en.html
@@ -243,7 +243,10 @@
 <div class="footer">
     <div class="footer-content">
         <div class="footer-block1"></div>
-        <div class="footer-block2"></div>
+        <div class="footer-block2">
+            <p>e-mail:<br>
+                    office@alpha-pharmaceutical.eu</p>
+        </div>
         <div class="footer-block3">
             <p>St. Pirenejska 9 office 28<br>
                 01493 Warsaw</p>
@@ -253,6 +256,8 @@
                 +48 602 655 305</p>
         </div>
         <div class="footer-block-mobile">
+            <p>e-mail:<br>
+                    office@alpha-pharmaceutical.eu</p>
             <p>St. Pirenejska 9 office 28<br>
                 01493 Warsaw</p>
             <p>tel:<br>
