--- a/AlphaPharmaceutical/index.html
+++ b/AlphaPharmaceutical/index.html
@@ -242,7 +242,10 @@
     <div class="footer">
         <div class="footer-content">
             <div class="footer-block1"></div>
-            <div class="footer-block2"></div>
+            <div class="footer-block2">
+                <p>e-mail:<br>
+                    office@alpha-pharmaceutical.eu</p>
+            </div>
             <div class="footer-block3">
                 <p>ul. Pirenejska 9 lok. 28<br>
                     01-493 Warszawa</p>
@@ -252,6 +255,8 @@
                     +48 602 655 305</p>
             </div>
             <div class="footer-block-mobile">
+                 <p>e-mail:<br>
+                    office@alpha-pharmaceutical.eu</p>
                 <p>ul. Pirenejska 9 lok. 28<br>
                     01-493 Warszawa</p>
                 <p>tel. kom:<br>
