--- a/AlphaPharmaceutical/index-ru.html
+++ b/AlphaPharmaceutical/index-ru.html
@@ -239,7 +239,10 @@
 <div class="footer">
     <div class="footer-content">
         <div class="footer-block1"></div>
-        <div class="footer-block2"></div>
+        <div class="footer-block2">
+            <p>e-mail:<br>
+                    office@alpha-pharmaceutical.eu</p>
+        </div>
         <div class="footer-block3">
             <p>ул. Пиренейская 9 оф. 28<br>
                 01 493 Варшава</p>
@@ -249,6 +252,8 @@
                 +48 602 655 305</p>
         </div>
         <div class="footer-block-mobile">
+            <p>e-mail:<br>
+                    office@alpha-pharmaceutical.eu</p>
             <p>ул. Пиренейская 9 оф. 28<br>
                 01 493 Варшава</p>
             <p>Телефон :<br>
