--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -93,9 +93,9 @@
     </div>
     <div href="" class="block-2__plate">
         <p>ДоказанНАЯ<br>
-            эффективность<sup>5</sup></p>
+            эффективность<sup>5</sup><a name="block-1"></a>
+        </p>
     </div>
-    <a name="block-1"></a>
 </div>
 <h2> 5 натуральных компонентов<br><b>для профилактики и лечения ангины</b></h2>
 <div class="block-4__container">
@@ -513,7 +513,7 @@
 <!--        plate5-->
         <div class="block-5__plate">
             <div class="block-5__text">
-                <h4>Рекомендации <br>при
+                <h4>Рекомендации<br>при
                     <br><b>ангине</b></h4>
                 <p>Когда воспалено горло, <b>возникают проблемы с голосом</b>. Помогите себе, чтобы снять воспаление и ощущение першения, когда возникает чувство, что «дерёт» в горле.
 
