--- a/influcid-BY/index.html
+++ b/influcid-BY/index.html
@@ -24,7 +24,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Инфлюцид</a>
-          <a class="where-to-buy where-to-buy__desktop" href="https://tabletka.by/search?request= %D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">Где купить</a>
+          <a class="where-to-buy where-to-buy__desktop" href="https://tabletka.by/search?request=%D0%B8%D0%BD%D1%84%D0%BB%D1%8E%D1%86%D0%B8%D0%B4">Где купить</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -43,7 +43,7 @@
               <a class="navmenu" href="#block-2" >Действие</a>
               <a class="navmenu" href="#block-3" >Состав</a>
               <a class="navmenu" href="#block-4" >Как принимать</a>
-              <a class="where-to-buy" href="https://tabletka.by/search?request= %D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD" >Где купить</a>
+              <a class="where-to-buy" href="https://tabletka.by/search?request=%D0%B8%D0%BD%D1%84%D0%BB%D1%8E%D1%86%D0%B8%D0%B4" >Где купить</a>
             <!-- <a href="index.html" >en</a> -->
           </div>
           <a class="instruction" href="./instruction.pdf"
@@ -436,7 +436,7 @@
             <div class="block-7">
               <!-- <h2>Где купить</h2> -->
                <div class="block-7__img">
-                 <a class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request= %D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">Где купить</a>
+                 <a class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request=%D0%B8%D0%BD%D1%84%D0%BB%D1%8E%D1%86%D0%B8%D0%B4">Где купить</a>
                </div>
               <div class="block-7__text">
                 <h3>Доказательная база</h3>
