--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -16,7 +16,7 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="#top"></a>
-            <a class="where-to-buy-mob" href="">ГДЕ КУПИТЬ</a>
+            <a class="where-to-buy-mob" href="#block-4">ГДЕ КУПИТЬ</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Состав и действие</a>
                 <a class="navmenu" href="#block-2">Способ приемА</a>
