--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<a href="influcid-Romania/index.html">influcid-Romania</a>
 			<a href="influcid-Moldova/index.html">influcid-Moldova</a>
 			<a href="Tansilotren/index.html">Tansilotren</a>
+			<a href="influcid-Georgia/index.html">influcid-Georgia</a>
 			
 		</section>
 	</main>
@@ -156,6 +157,9 @@
 	}
 	a:nth-child(28)::before {
 		background: url("./Tansilotren/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(29)::before {
+		background: url("./influcid-Georgia/bg.png")no-repeat center / cover;
 	}
 </style>
 
