--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -451,15 +451,17 @@ Həmçinin çox vaxt ürək çatışmazlığı inkişaf edir.</p>
 <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
 <!--            </ol>-->
             <p>
-              Официальный представитель в Азербайджане:
+              "Alpen Pharma AG"-nin Azərbaycan Respublikasındaki Nümayəndəliyi
               <br>
-              юр. адресс ____ Тел./факс: ____ www.alpenpharma.com
+              Ünvan : Bakı şəhəri, Tbilisi prosp. 49/C, Chirag Plaza Hotel & Business Centre, AZ 1065,
               <br>
-              :Email__
+              Tel.: +994 12 499 72 71
+              <br>
+              www.alpenpharma.az
             </p>
             <div class="logos-container">
-              <a class="disclamer-tra__logo" href=""><p><b>Производитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Импортер:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
+              <a class="disclamer-tra__logo" href=""><p><b>İstehsalçı:</b><br>DHU<br>https://www.dhu.de/</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>İdxalçı:</b><br> Alpen Pharma AG<br>www.alpenpharma.az</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
