--- a/influcid-Moldova/index-mol.html
+++ b/influcid-Moldova/index-mol.html
@@ -29,7 +29,7 @@
         <a name='block-nav'></a>
         <div class="navigation-logo">
           <a  href="#block-nav" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">No text in translation</a>
+          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Unde îl poți procura</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
