--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			<a href="influcid-Moldova/index.html">influcid-Moldova</a>
 			<a href="Tansilotren/index.html">Tansilotren</a>
 			<a href="influcid-Georgia/index.html">influcid-Georgia</a>
+			<a href="influcid-Uzbekistan/index.html">influcid-Uzbekistan</a>
 			
 		</section>
 	</main>
@@ -160,6 +161,9 @@
 	}
 	a:nth-child(29)::before {
 		background: url("./influcid-Georgia/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(30)::before {
+		background: url("./influcid-Uzbekistan/bg.png")no-repeat center / cover;
 	}
 </style>
 
