--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -161,18 +161,21 @@
                 </button>
                 <div class="popup__body">
                     <div class="popup__message">
-                        <p><b>Дети от 6 до 12 лет</b></p>
+                        <p><b>Дети от 2 до 6 лет </b></p>
 
-                        <p>Острый период: по 1 табл. каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
+                        <p><b>При острых состояниях или для поддерживающей терапии:</b> по 1 табл. 3 раза в сутки.</p>
 
-                        <p>Поддерживающая терапия: по 1 табл. 3 раза в день до полного выздоровления.
-                            *Если после 8 дней лечения не наблюдается полного выздоровления или появились новые симптомы заболевания, следует обязательно обратиться к врачу.</p>
+                        <p><b>При увеличении небных миндалин:</b> 
+                            по 1 табл. 3 раза в сутки, 
+                            6-8 недель.</p>
 
-                        <p>При увеличении небных миндалин: по 1 табл. 3 раза в день, 6-8 недель.</p>
-
-                        <p>При склонности к ангинам для профилактики повторных эпизодов: по 1 табл. 3 раза в день, 6-8 недель несколько курсов в год.</p>
+                        <p><b>При склонности к ангинам для профилактики повторных эпизодов: </b>
+                            по 1 табл. 3 раза в сутки,
+                            6-8 недель
+                            несколько курсов в год.</p>
 
                         <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
+
                     </div>
                 </div>
             </div>
@@ -186,27 +189,16 @@
                 </button>
                 <div class="popup__body">
                     <div class="popup__message">
-                        <p><b>Острый период:</b></p>
+                        <p><b>Дети от 6 до 12 лет</b></p>
 
-                        <p>по 1 табл. каждые 2 часа
-                            (до 6 раз в день) первые 1-2 дня до улучшения.</p>
+                        <p><b>Острый период:</b> по 1 табл. каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
 
-                        <p><b>Поддерживающая терапия:</b></p>
+                        <p><b>Поддерживающая терапия:</b> по 1 табл. 3 раза в день до полного выздоровления.
+                            *Если после 8 дней лечения не наблюдается полного выздоровления или появились новые симптомы заболевания, следует обязательно обратиться к врачу.</p>
 
-                        <p>по 1 табл. 3 раза в день до полного выздоровления.</p>
+                        <p><b>При увеличении небных миндалин:</b> по 1 табл. 3 раза в день, 6-8 недель.</p>
 
-                        <p><sup>*</sup>Если после 8 дней лечения не наблюдается полного выздоровления или появились новые симптомы заболевания, следует обязательно обратиться к врачу.</p>
-
-                        <p><b>При увеличении небных миндалин:</b></p>
-
-                        <p>по 1 табл. 3 раза в день, 6-8 недель.</p>
-
-                        <p><b>При склонности к ангинам для профилактики повторных эпизодов:</b></p>
-
-                        <p>по 1 табл. 3 раза в день,<br>
-                            6-8 недель<br>
-                            несколько курсов в год.
-                        </p>
+                        <p><b>При склонности к ангинам для профилактики повторных эпизодов:</b> по 1 табл. 3 раза в день, 6-8 недель несколько курсов в год.</p>
 
                         <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
 
@@ -297,8 +289,7 @@
         <div class="block-5__plate">
             <div class="block-5__text">
                 <h4>Хронический тонзиллит – <br><b>приговор?</b></h4>
-                <p>В жизни практически каждый человек сталкивался с болью в горле и ангиной. А вот диагноз <b>«Рекуррентный тонзиллит»</b>  для многих окажется чем-то страшным. Что же это за заболевание и как его лечить?<br>
-                    ТОНЗИЛЛИТ – это острое или хроническое воспаление нёбных миндалин – образований на боковых поверхностях в глубине глотки, похожих на миндальные орехи. Миндалины пронизаны особыми щелями - лакунами.
+                <p>В жизни практически каждый человек сталкивался с болью в горле и ангиной. А вот диагноз <b>«Рекуррентный тонзиллит»</b>  для многих окажется чем-то страшным. Что же это за заболевание и как его лечить?
                 </p>
             </div>
             <div class="block-5__img"></div>
@@ -309,15 +300,15 @@
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text">
                     <h4>Хронический тонзиллит – <br><b>приговор?</b></h4>
-                    <p>В жизни практически каждый человек сталкивался с болью в горле и ангиной. А вот диагноз <b>«Рекуррентный тонзиллит»</b>  для многих окажется чем-то страшным. Что же это за заболевание и как его лечить?<br>
-                        ТОНЗИЛЛИТ – это острое или хроническое воспаление нёбных миндалин – образований на боковых поверхностях в глубине глотки, похожих на миндальные орехи. Миндалины пронизаны особыми щелями - лакунами.
+                    <p>В жизни практически каждый человек сталкивался с болью в горле и ангиной. А вот диагноз <b>«Рекуррентный тонзиллит»</b>  для многих окажется чем-то страшным. Что же это за заболевание и как его лечить?
                     </p>
                 </div>
             </div>
             <button class="accordion popup-btn block-5__popup">Детальнее</button>
 
             <div class="panel">
-                <p>ОСТРЫЙ ТОНЗИЛЛИТ или АНГИНА – это острое инфекционное заболевание с преимущественным поражением миндалин. При этом страдают как сами миндалины, так и весь организм в целом. В большинстве случаев острый тонзиллит вызывают вирусы, но особенно опасны бактерии: стрептококки или стафилококки. Проявляется он сильной болью в горле, воспалением и увеличением в размере нёбных миндалин, высокой температурой. Возможно появление гнойных налётов. После перенесенной ангины снижается иммунитет и организму становится сложнее сопротивляться инфекциям. Если же в течение года  у человека два и более повторных эпизода острого тонзиллита, то речь уже идет о рекуррентном тонзиллите ( с латинского Recurrens - «возвратный, повторный»). Таким образом, РЕКУРРЕНТНЫЙ ТОНЗИЛЛИТ – это ни что иное, как обострение имеющегося ХРОНИЧЕСКОГО ТОНЗИЛЛИТА.</p>
+                <p>ТОНЗИЛЛИТ – это острое или хроническое воспаление нёбных миндалин – образований на боковых поверхностях в глубине глотки, похожих на миндальные орехи. Миндалины пронизаны особыми щелями - лакунами. Лакуны - ловушки для микробов и вирусов, а также своеобразный «полигон», где иммунная система учится борьбе с этими микробами и вирусами. Именно миндалины первыми встречают болезнетворные микроорганизмы из внешней среды и обеспечивают защиту нашего организма. 
+                ОСТРЫЙ ТОНЗИЛЛИТ или АНГИНА – это острое инфекционное заболевание с преимущественным поражением миндалин. При этом страдают как сами миндалины, так и весь организм в целом. В большинстве случаев острый тонзиллит вызывают вирусы, но особенно опасны бактерии: стрептококки или стафилококки. Проявляется он сильной болью в горле, воспалением и увеличением в размере нёбных миндалин, высокой температурой. Возможно появление гнойных налётов. После перенесенной ангины снижается иммунитет и организму становится сложнее сопротивляться инфекциям. Если же в течение года  у человека два и более повторных эпизода острого тонзиллита, то речь уже идет о рекуррентном тонзиллите ( с латинского Recurrens - «возвратный, повторный»). Таким образом, РЕКУРРЕНТНЫЙ ТОНЗИЛЛИТ – это ни что иное, как обострение имеющегося ХРОНИЧЕСКОГО ТОНЗИЛЛИТА.</p>
                 <p>Наличие хронического тонзиллита означает, что миндалины не справляются со своей защитной функцией и не могут полноценно обеспечить функционирование местного и общего иммунитета.</p>
 
                 <p><b>Также ЧАСТЫЕ АНГИНЫ могут повлечь развитие серьезных осложнений</b></p>
@@ -334,11 +325,12 @@
 
                 <p>Более 80 лет для успешного лечения ангины и рекуррентного тонзиллита применяется немецкий натуральный комплексный препарат Тонзилотрен (DHU, Германия). ТОНЗИЛОТРЕН – комбинация из пяти активных натуральных компонентов, которые снимают воспаление и стимулируют собственные защитные механизмы организма при вирусных и бактериальных инфекциях глотки на разных стадиях воспаления, способствуют уменьшению увеличенных миндалин.</p>
 
-                <p>Важно, что Тонзилотрен, действуя на миндалины, снимает воспаление и восстанавливает их защитную функцию, что способствует уменьшению количества и риска возникновения повторных ангин и потребности в применении антибиотиков<sup>2</sup>.</p>
+                <p>Важно, что Тонзилотрен, действуя на миндалины, снимает воспаление и восстанавливает их защитную функцию, что способствует уменьшению количества и риска возникновения повторных ангин и потребности в применении антибиотиков<sup>1</sup>.</p>
 
                 <p>Препарат можно применять как для лечения, так и для профилактики ангин. Применяется у детей старше 2 лет и взрослых. При склонности к частым ангинам несколько курсов в год с применением препарата Тонзилотрен могут позволить сохранить миндалины — важный иммунный орган человека. Курс: по 1 табл. 3 раза в день в течение 6-8 недель.</p>
 
                 <p><b>Тонзилотрен – безопасное лечение и профилактика ангины. И пусть ваши миндалины никогда не узнают, что такое хронический тонзиллит.</b></p>
+                <p>1. Jürgen Palma et all. «Effectiveness of an add-on treatment with the homeopathic medication SilAtro-5-90 in recurrent tonsillitis: An international, pragmatic, randomized, controlled clinical trial» // Complementary Therapies in Clinical Practice Volume 28, August 2017, Pages 181-191.</p>
             </div>
         </div>
 
@@ -483,11 +475,11 @@
                 <p>
                     Заболеваемость хроническим тонзиллитом:<br>
                     Взрослые: от 5-6% до 37%<br>
-                    Дети: от 15% до 63% <sip>1</sip><br>
+                    Дети: от 15% до 63% <sup>1-4</sup><br>
                     Наиболее высокая заболеваемость приходится на возрастную группу 16-20 лет. В общей
                     популяции детей хронический тонзиллит случается с частотой 15%, а в группе часто болеющих
                     детей - 43%, что подтверждает важную роль миндалин в формировании иммунной защиты
-                    ребенка <sup>2</sup>.
+                    ребенка <sup>5</sup>.
                     <p>
                         Тонзилотрен показал отличную переносимость и безопасность в 21 клиническом
                         исследовании, с участием более 10 000 пациентов, в том числе более 8 000 детей.
@@ -495,16 +487,18 @@
                         В ходе исследования:
                     </p>
                     <p>
-                        На 4 день терапевтический эффект наступил у 93,3% больных<br>
+                        • На 4 день терапевтический эффект наступил у 93,3% больных<br>
                         • Затрудненное глотание полностью исчезло на 4 день у 56,7% больных<br>
                         • Результат анализа на гемолитические стрептококки на 10 день был отрицательным<br>
-                        • Переносимость была оценена как очень хорошая в 100% случаев<sup>3</sup><br>
+                        • Переносимость была оценена как очень хорошая в 100% случаев<sup>5</sup><br>
                     </p>
                     <p>
-                        1 Tsvetkov EA, 2003; Palchun VT, 2008, 2016; Bogomilsky M.R., Chistyakova V.R., 2014; Vishnyakov VV., 2014; Hoffman V.R. et al, 2015 Bogomilsky<br>
-                        M.R. et al., 2003 Maltseva G.S., 2008, 2015 (нужно оформить литературу)<br>
-                        2 Дитячий лікар 6 (13) 2011, Хронічний тонзиліт у дітей: актуальні питання лікування та профілактики.<br>
-                        3 Лечение катаральной ангины с помощью гомеопатического препарата Тонзилотрен, Боковой А., Хегер М.,Щютцле Б.<br>
+                        1. Мальцева Г. С., Гринчук О. Н. Консервативное лечение хронического тонзиллита стрептококковой этиологии // Оториноларингология : статья в журнале - научная статья. — Москва: Некоммерческое партнерство содействия развитию системы здравоохранения и медицины "Русмедикал групп", 2011. — № 6. — С. 20—23. <br>
+                        2. Богомильский М.Р., Чистякова В.Р. Детская оториноларингология // Медицина. — Москва, 2015<br>
+                        3. Вишняков В.В. Оториноларингология. Медицина. — Москва, 2014<br>
+                        4. Пальчун В.Т. Руководство по практической оториноларингологии. Медицина. — Москва, 2011<br>
+                        5 .Дитячий лікар 6 (13) 2011, Хронічний тонзиліт у дітей: актуальні питання лікування та профілактики.<br>
+                        6. Лечение катаральной ангины с помощью гомеопатического препарата Тонзилотрен, Боковой А., Хегер М.,Щютцле Б.
                     </p>
                 </p>
             </div>
@@ -517,7 +511,7 @@
                     <br><b>ангине</b></h4>
                 <p>Когда воспалено горло, <b>возникают проблемы с голосом</b>. Помогите себе, чтобы снять воспаление и ощущение першения, когда возникает чувство, что «дерёт» в горле.
 
-                    По возможности следует избегать курения и употребления алкоголя в острой воспалительной фазе. Они дополнительно раздражают и ослабляют слизистые оболочки.</p>
+                </p>
             </div>
             <div class="block-5__img"></div>
         </div>
