--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -191,7 +191,8 @@
                     <div class="popup__message">
                         <p><b>Дети от 6 до 12 лет</b></p>
 
-                        <p><b>Острый период:</b> по 1 табл. каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
+                        <p><b>Острый период:</b> по 1 табл. каждые 2 часа (до 6 раз в день)
+                            первые 1-2 дня до улучшения.</p>
 
                         <p><b>Поддерживающая терапия:</b> по 1 табл. 3 раза в день до полного выздоровления.
                             *Если после 8 дней лечения не наблюдается полного выздоровления или появились новые симптомы заболевания, следует обязательно обратиться к врачу.</p>
@@ -219,7 +220,8 @@
                         <p><b>Острый период:</b></p>
 
                         <p>по 1 табл. каждый час
-                            (до 12 раз в день) первые 1-2 дня до улучшения.
+                            (до 12 раз в день) 
+                            первые 1-2 дня до улучшения.
                         </p>
 
                         <p>Поддерживающая терапия:</p>
@@ -270,13 +272,13 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 6 до 12 лет</h3>
-            <p><b>Острый период:</b><br>по 1 табл. каждые 2 часа (до 6 раз в день)первые 1-2 дня до улучшения.</p>
+            <p><b>Острый период:</b><br>по 1 табл. каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
             <button class="popup-btn popup2" data-action="open2">Детальнее</button>
         </div>
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети старше 12 лет и взрослые</h3>
-            <p><b>Острый период:</b><br>по 1 табл.каждый час (до 12 раз в день)первые 1-2 дня до улучшения.</p>
+            <p><b>Острый период:</b><br>по 1 табл.каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
             <button class="popup-btn popup3" data-action="open3">Детальнее</button>
         </div>
     </div>
