--- a/Tansilotren/index-en.html
+++ b/Tansilotren/index-en.html
@@ -20,7 +20,7 @@
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Formulation and action</a>
                 <a class="navmenu" href="#block-2">Route of administration</a>
-                <a class="navmenu" href="#block-3">Helpful information</a>
+                <a class="navmenu" href="#block-3">Useful information</a>
                 <a class=" where-to-buy" href="#block-4">Where to buy</a>
                 <a class="lang" href="index.html">ru</a>
             </div>
@@ -38,7 +38,7 @@
                             <a class="navmenu" href="#block-2">Route of administration</a>
                         </li>
                         <li>
-                            <a class="navmenu" href="#block-3">Helpful information</a>
+                            <a class="navmenu" href="#block-3">Useful information</a>
                         </li>
 <!--                        <li>-->
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
@@ -287,7 +287,7 @@
 </div>
 
 <div class="block-5">
-    <h1>Helpful information</h1>
+    <h1>Useful information</h1>
     <div class="block-5__inner">
         <div class="block-5__plate">
             <div class="block-5__text">
